--- a/Money-And-Investments/index.html
+++ b/Money-And-Investments/index.html
@@ -649,6 +649,7 @@
    </head>
    <body>
       <div class="container">
+        <a href="one_page_viewer.html" target="_blank">PDF Viewer</a>
          <div class="search-box">
             <input
                type="text"
